[package]
name = "brewdrivers"
version = "0.12.0"
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2018"
description = "Brewkit drivers"
documentation = "https://docs.rs/brewdrivers/"
homepage = "https://docs.rs/crate/brewdrivers/"
repository = "https://github.com/NavasotaBrewing/brewdrivers"
readme = "readme.md"
keywords = ["serial", "hardware", "brewing", "control", "driver"]
categories = ["hardware-support", "network-programming"]
license = "MIT"

[dependencies]
hex = "0.3.2"
# This is for the relay boards
# TODO: See if this can work with tokio-serial
# Note: looks like we can't for the STR1 board, maybe for the waveshare. We'll have to keep it for now.
serialport = "4.0"
crc = "2.0.0"
futures = "0.3"
tokio-modbus = { version = "0.5.3", default-features = false, features = ["rtu"] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.3"
derivative = "2.2.0"
thiserror = "1.0.37"
serde = { version = "1", features = [ "derive" ]}
async-trait = "0.1.57"
log = "0.4.17"

# tokio-util = "0.7.4"
# bytes = "1.2.1"


[dev-dependencies]
serial_test = "0.4.0"
serde_yaml = "0.9.13"

[features]
default = []
network = []

# Command to build and watch docs
# cargo watch -s 'cargo doc && http-server -p 8000 target/doc'
# Then open http://localhost:8000/brewdrivers/index.html
