[package]
name = "brewdrivers"
version = "0.15.0"
authors = ["llamicron <llamicron@gmail.com>"]
edition = "2021"
description = "Brewkit drivers"
documentation = "https://docs.rs/brewdrivers/"
homepage = "https://docs.rs/crate/brewdrivers/"
repository = "https://github.com/NavasotaBrewing/brewdrivers"
readme = "readme.md"
keywords = ["serial", "hardware", "brewing", "control", "driver"]
categories = ["hardware-support", "network-programming"]
license = "MIT"

[dependencies]
hex = "0.3.2"
serialport = "4.0"
crc = "2.0.0"

futures = "0.3.25"
tokio-modbus = { version = "0.5", default-features = false, features = ["rtu", "server"] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.3"
async-trait = "0.1.57"

# This is used to get the Debug derivation to ignore a field
derivative = "2.2.0"

thiserror = "1.0.37"

log = "0.4.17"
env_logger = "0.9.1"

serde = { version = "1", features = [ "derive" ]}
serde_yaml = "0.9"


[dev-dependencies]
tokio-test = "0.4.2"
pretty_assertions = "1.3.0"

[features]
default = []
network = []
